src/objects/Case_BU__c.object
<CustomObject>
    <fields>
        <fullName>Product_Type__c</fullName>
        <inlineHelpText>What kind of Product is this Case about?</inlineHelpText>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>500 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>650 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>670 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busbar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cap Thor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circuit breaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMBIFLEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMBITEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control&amp;Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Resistor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REB500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transducer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve Cooling</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_transport_costs__c</fullName>
        <description>Transport costs</description>
        <inlineHelpText>Transportation cost</inlineHelpText>
        <label>Product transport cost(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products_quantity_installed__c</fullName>
        <inlineHelpText>Quantity of same/similar products installed in the same plant</inlineHelpText>
        <label>Products quantity installed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <inlineHelpText>Field Service or Modular System opportunities per customer contract agreement</inlineHelpText>
        <label>Project Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>After SAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre FAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreSales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Maintenance</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <inlineHelpText>Field Service or Modular System opportunities</inlineHelpText>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Bid submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bit Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAT completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Delays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Plan completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT completed</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <inlineHelpText>Possible option to solve the case</inlineHelpText>
        <label>Proposed Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Credit note to customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair at ABB Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair at site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair by ABB partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repaired by Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spare parts delivery</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RAL_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This &apos;flag&apos; is used to evaluate use of remote access link to meet contract requirements and drive RAP Sales opportunities</inlineHelpText>
        <label>RAL Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAM_reqiurement_valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RAM, Reliability, Availability, and Maintainability.</description>
        <inlineHelpText>Reliability, availability, and maintainability (RAM) valid, i.e penalties?</inlineHelpText>
        <label>RAM reqiurement valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCA_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Root Casue Analysis needed ?</description>
        <inlineHelpText>In case Root Cause analysis is needed for Case, please check this checkbox</inlineHelpText>
        <label>RCA needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMA_No__c</fullName>
        <description>Return Material Authorisation reference that is needed for the customer in case of sending drive for repair at workshop</description>
        <inlineHelpText>Return Authorization Number</inlineHelpText>
        <label>RMA No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_ticket__c</fullName>
        <description>Main reason that caused the issue</description>
        <inlineHelpText>Where in the process the error happened?</inlineHelpText>
        <label>Reason for ticket</label>
        <picklist>
            <picklistValues>
                <fullName>Component Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected equipment (motor, trafo…)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer doesn&apos;t know the product / Misuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spare Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_forvisit__c</fullName>
        <description>Selection list of life cycle phase</description>
        <inlineHelpText>Selection list of life cycle phase</inlineHelpText>
        <label>Reason for visit</label>
        <picklist>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventive Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trip / breakdown / downtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrades</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_note__c</fullName>
        <description>Link to ABB Library</description>
        <inlineHelpText>This is a related document to an instrument or system</inlineHelpText>
        <label>Release note</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Repair_at_ABB_workshop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>An option chosen to solve the case, Product is removed form site and transported to workshop</inlineHelpText>
        <label>Repair at ABB workshop</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipName>Case_Business_Unit_Specific_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replacement_Order_Number__c</fullName>
        <description>Replacement Order no or Credit Note Invoice no to Customer</description>
        <inlineHelpText>Order nr for replacement of the product. Typically OMS (Order Management System) nr.</inlineHelpText>
        <label>Replacement Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_SN__c</fullName>
        <description>Serial number of the replacement unit sent out</description>
        <inlineHelpText>Serial# of the replacement unit</inlineHelpText>
        <label>Replacement SN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>This is the micro-detail of the inquiry type used for reporting.</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>ABB Library: Communications Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB Library: Content Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB Library: System Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Other than Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation and Power World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog Type Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Start Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrective Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Reference Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Enclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Account Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Satisfaction Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service Issue (RMA, Expedite, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Jokab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Jokab Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Jokab USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom PQS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing/ Instruction Sheet/ Document Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DriveHelp Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HotLine</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_Tracking__c</fullName>
        <description>Return tracking information for return of faulty unit</description>
        <inlineHelpText>Ship tracking for return of faulty unit</inlineHelpText>
        <label>Return Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SU_Costsunder_goodwill__c</fullName>
        <description>SU Total cost for the case</description>
        <inlineHelpText>If the case is assessed not to be a warranty, cost value that the sales unit is willing to cover under a goodwill agreement</inlineHelpText>
        <label>SU Costs under goodwill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SU_Goodwill__c</fullName>
        <description>SU share of the Total Cost</description>
        <inlineHelpText>If the case is assessed not to be a warranty, % of the cost that the sales unit is willing to cover under a goodwill agreement</inlineHelpText>
        <label>SU Goodwill (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Responsible_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which Selling Responsible Unit has sold ?</description>
        <inlineHelpText>ABB unit who sold the goods to the customer and purchased it from Production unit.</inlineHelpText>
        <label>Selling Responsible Unit</label>
        <referenceTo>LBU_Code__c</referenceTo>
        <relationshipName>Case_Business_Unit_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity_of_Event__c</fullName>
        <inlineHelpText>System design</inlineHelpText>
        <label>Severity of Event</label>
        <picklist>
            <picklistValues>
                <fullName>Bipolar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopolar</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShipTo_Siteadress__c</fullName>
        <description>customer location (address)</description>
        <inlineHelpText>Customer specified drop / ship to address for warranty related cases</inlineHelpText>
        <label>Ship To Site adress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Business_Resident__c</fullName>
        <description>Name of Business or Resident where the unit is being shipped to</description>
        <inlineHelpText>RMA or Parts order Ship to Name</inlineHelpText>
        <label>Ship to Business/Resident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City__c</fullName>
        <description>City Information related to shipping the unit</description>
        <inlineHelpText>RMA or Parts order Ship to City</inlineHelpText>
        <label>Ship to City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Contact__c</fullName>
        <description>Contact information related to shipping address</description>
        <inlineHelpText>RMA or Parts order Ship to Contact</inlineHelpText>
        <label>Ship to Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Contact_phone__c</fullName>
        <inlineHelpText>RMA or Parts order Ship to Contact phone</inlineHelpText>
        <label>Ship to Contact phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State__c</fullName>
        <description>State Information related to shipping the unit</description>
        <inlineHelpText>RMA or Parts order Ship to State</inlineHelpText>
        <label>Ship to State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Street__c</fullName>
        <description>Street Information related to shipping the unit</description>
        <inlineHelpText>RMA or Parts order Ship to Street address</inlineHelpText>
        <label>Ship to Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Tracking__c</fullName>
        <description>Ship tracking for replacement unit</description>
        <label>Ship Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip__c</fullName>
        <description>Zip Code Information related to shipping the unit</description>
        <inlineHelpText>RMA or Parts order Ship to postal code</inlineHelpText>
        <label>Ship to Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Date__c</fullName>
        <description>Logistics &amp; SU Details</description>
        <inlineHelpText>Warranty requested customer shipping date</inlineHelpText>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_instruction__c</fullName>
        <description>Goods marking - per customer requests</description>
        <inlineHelpText>Shipping instruction per customer request ( Freight type, Freight company, packaging instructions)</inlineHelpText>
        <label>Shipping instruction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_circuit_protection_device_presence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify if short circuit protection device presence is present</description>
        <inlineHelpText>If any/foreseen, check the presence of short circuit protection</inlineHelpText>
        <label>Short circuit protection device presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_circuit_protection_device_type__c</fullName>
        <description>Specify if short circuit protection device presence is present</description>
        <inlineHelpText>Indicate the type of short circuit protection present</inlineHelpText>
        <label>Short circuit protection device type</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic circuit breaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual motor start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moulded case circuit breaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Business_Resident__c</fullName>
        <description>Name of Business or Resident where unit is located</description>
        <inlineHelpText>Name of site for FSE visit</inlineHelpText>
        <label>Site Business/Resident</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_City__c</fullName>
        <description>City where unit is located</description>
        <inlineHelpText>City for FSE visit</inlineHelpText>
        <label>Site City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact__c</fullName>
        <description>On-site Contact person name</description>
        <inlineHelpText>Site Contact for FSE visit</inlineHelpText>
        <label>Site Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Contact_phone__c</fullName>
        <description>On-site Contact person phone number</description>
        <inlineHelpText>Site Contact phone for FSE visit</inlineHelpText>
        <label>Site Contact phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Special_Instructions__c</fullName>
        <description>Any special instructions needed for the site (passcode, security clearance, lift equipment, etc.)</description>
        <inlineHelpText>Special instructions for FSE visit (i.e. a lift is needed to access inverters)</inlineHelpText>
        <label>Site Special Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <description>State where unit is located</description>
        <inlineHelpText>State for FSE visit</inlineHelpText>
        <label>Site State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Street__c</fullName>
        <description>Street address where unit is located</description>
        <inlineHelpText>Street address for FSE visit</inlineHelpText>
        <label>Site Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Zip__c</fullName>
        <inlineHelpText>Postal code for FSE visit</inlineHelpText>
        <label>Site Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_version__c</fullName>
        <description>Populated from ServIS</description>
        <inlineHelpText>Software per product order code</inlineHelpText>
        <label>Software version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <inlineHelpText>This is a List, set of related Solution types to a respective product  or system</inlineHelpText>
        <label>Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Bump software key, or Generate license</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed per Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact hardware supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected corrupted file/database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correction promised in Next Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Setup or Configuration (HW or SW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intrim Fix has been provided to the caller and planned for correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Report Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No change to be provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response From Customer (data or confirmation of resolution)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Solution since issue was not reproducable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Solution since it is duplicate case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parameter Tuning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem Resolved without Further Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper System Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided Requested Report or Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided Temporary Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide requested information to caller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Training for the Caller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reboot/Reset ConsoleWorkstation/Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-install software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace Hardware</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spare_part_cost__c</fullName>
        <description>Cost for the spare parts ordered</description>
        <inlineHelpText>Spare part cost</inlineHelpText>
        <label>Spare part cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spare_part_orderno__c</fullName>
        <description>BOL or SAP Purchase order number</description>
        <inlineHelpText>Spare part order number from BOL (BusinessOnline)</inlineHelpText>
        <label>Spare part order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>Any special instructions</description>
        <inlineHelpText>Ship to special instructions (i.e. leave at back door)</inlineHelpText>
        <label>Special Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_environmental_condition__c</fullName>
        <description>Specify if any special environmental condition is present</description>
        <inlineHelpText>Indicate any specific environmental installation condition that can affect/participate to the ABB product functioning</inlineHelpText>
        <label>Specific environmental condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>